<resources>
    <string name="app_name">MVP-RxJava</string>
    <string name="saving_text">Save Text</string>
    <string name="btn_save">Save</string>
    <string name="text">Text</string>
    <string name="error">Error</string>
    <string name="some_error">Some Error</string>
    <string name="todo_completed">Completed</string>
    <string name="active">Active</string>
    <string name="empty_todo_list">Empty List</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="signin_loading">Loading</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="password">Password</string>
    <string name="signUp">SignUp</string>
    <string name="user_name">Username</string>
    <string name="doesnt_match">Doesnt math</string>
    <string name="signup_loading">Signing up...</string>
    <string name="splash_text">Splash</string>
    <string name="confirmPassword">Password</string>
</resources>
