<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Email Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:backgroundTint="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- User name Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/user_name"
            android:inputType="text"
            app:backgroundTint="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:backgroundTint="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirm Password Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_input_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/input_confirm_password"
            style="@style/TextAppearance.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            app:backgroundTint="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorWhite"
        android:padding="12dp"
        android:text="@string/signUp"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp" />

</LinearLayout>
